--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: CV Arxiv Daily
-description: Automatically Update CV Papers Daily using Github Actions (Update Every 8th hours)
+title: Agents Arxiv Daily
+description: Automatically Update Agents Papers Daily using Github Actions (Update Every 8th hours)
 show_downloads: true
 
 github:
