--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,8 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "Agent":
-        filters: ["Agent", "Agents", "Multi Agent System", "MAS", "Foudation Agents"]
+        filters: ["intelligent agent", "AI agent", "LLM-based agent framework", "autonomous agent", "agent system framework", "Foudation Agents", "agent benchmark", "agent evaluation framework", "AgentBench", "LLM agent benchmark"]
+    "Multi-Agent":
+        filters: ["multi-agent coordination", "multi-agent task allocation", "multi-agent cooperation", "multi-agent benchmark", "multi-agent reinforcement learning collaboration"]
     "RL":
-        filters: ["Reinforcement Learning"]
+        filters: ["Reinforcement Learning for Agent"]
