--- a/config.yaml
+++ b/config.yaml
@@ -23,8 +23,8 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "Agent":
-        filters: ["intelligent agent", "AI agent", "LLM-based agent framework", "autonomous agent", "agent system framework", "Foudation Agents", "agent benchmark", "agent evaluation framework", "AgentBench", "LLM agent benchmark"]
+        filters: ["intelligent agent", "AI agent", "LLM agent framework", "agent memory", "agent emotion" "autonomous agent", "agent system framework", "Foudation Agents", "agent benchmark", "agent evaluation framework", "AgentBench", "LLM agent benchmark"]
     "Multi-Agent":
-        filters: ["multi-agent coordination", "multi-agent task allocation", "multi-agent cooperation", "multi-agent benchmark", "multi-agent reinforcement learning collaboration"]
+        filters: ["multi-agent system", "agent collaboration"]
     "RL":
-        filters: ["Reinforcement Learning for Agent"]
+        filters: ["Reinforcement Learning for AI Agent"]
